Gave header fixed height on mobile Fixes scrolling issues on mobile browsers

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -195,11 +195,6 @@ a:hover {
   font-size: 1.3em;
 }
 
-/* Images */
-.quote-generator {
-  // border: 1px solid black;
-}
-
 /* Responsive queries */
 @media screen and (max-width: 767px) {
 	h1 {
@@ -217,6 +212,9 @@ a:hover {
 	.subtitle {
 		font-size: 1.5em;
 	}
+  header {
+    height: 500px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
